# financial-planner

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  index.scss  site_config.yaml
.github/workflows/: gen-blog.yaml
_site/: index.html
_site/app/: financial-planner-ui-c68e6128ec6af145.js
_site/blog/: 02-Defining-the-Process.html
dev-blog/: 01-Exploring-the-Tool.md  02-Defining-the-Process.md  config.yaml  index.md
dev-blog/blog/: 00-post.md
dev-blog/templates/: post.hbs
docs/: index.html
docs/app/: financial-planner-ui-854cb47ad5b35ebc.js  financial-planner-ui-854cb47ad5b35ebc_bg.wasm  financial-planner-ui-973509bd24fd3e0a.js  financial-planner-ui-973509bd24fd3e0a_bg.wasm  financial-planner-ui-b8b0819c2e73c273.js  financial-planner-ui-b8b0819c2e73c273_bg.wasm  financial-planner-ui-c68e6128ec6af145_bg.wasm  financial-planner-ui-f376edddf69d0c17.js  financial-planner-ui-f376edddf69d0c17_bg.wasm  index-b34cb7a077369f20.css  index-d6aa6b0b7d39d18d.css  index.html
docs/app/.stage/: index-d7a65df8599c2622.css
docs/blog/: 01-Exploring-the-Tool.html  02-Defining-the-Process.html
site/: index.md
site/blog/: 01-Exploring-the-Tool.md  02-Defining-the-Process.md  _zettel.yaml
site/templates/: index.hbs  post.hbs
spec/: 00-ui.spec
src/: app.rs  app_state.rs  date_summaries_list.rs  debug_window.rs  main.rs  state.rs  timeline.rs  transactions_form.rs  transactions_list.rs
