[package]
name = "financial-planner-ui"
version = "0.1.0"
edition = "2021"
description = "An app for collaboratively managing an account balance"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "Do No Harm"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
wasm-bindgen = "0.2.86"
gloo-console = "0.2.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
]
