[package]
name = "financial-planner-ui"
version = "0.1.0"
edition = "2021"
description = "An app for collaboratively managing an account balance"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "Do No Harm"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
wasm-bindgen = "0.2.86"
gloo-console = "0.2.3"
itertools = "0.10"
plotters = "0.3.3"
plotters-canvas = "0.3.0"
chrono = {version="0.4", features=["serde"]}
libmath = "0.2"
wrapper = "0.1.1"
serde = "1.0"
serde_yaml = "0.9"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
]

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
